fix footer on mobile

--- a/style.scss
+++ b/style.scss
@@ -373,7 +373,7 @@ footer {
     color: #fff;
     text-align: center;
     img {
-        width: 80px;
+        width: 75px;
     }
     .wrapper {
         padding-top: 20px;
@@ -387,7 +387,7 @@ footer {
         padding: 28px 5px;
     }
     a {
-        padding: 51px 5px 53px;
+        padding: 48px 5px 53px;
     }
     a:hover,
     a:focus {
